--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".actividades.MostrarImagen"></activity>
+        <activity android:name=".actividades.Pdf"></activity>
+        <activity android:name=".actividades.MostrarImagen" />
         <activity android:name=".actividades.ActivityAgregar" />
         <activity android:name=".actividades.LoginActivity" />
         <activity android:name=".MainActivity">
