--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     // implementar documentacion pdf
     implementation 'com.itextpdf:itextg:5.5.10'
 
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
 }
